crates/llvmkit-ir/tests/compile_fail/add_incoming_after_finish.stderr
error[E0599]: no method named `add_incoming` found for struct `PhiInst<'_, i32, llvmkit_ir::Closed, Brand<'_>>` in the current scope
  --> tests/compile_fail/add_incoming_after_finish.rs:35:21
   |
35 |         let _ = phi.add_incoming(3_i32, entry);
   |                     ^^^^^^^^^^^^
   |
note: there's an earlier shadowed binding `phi` of type `PhiInst<'_, i32, llvmkit_ir::Open, Brand<'_>>` that has method `add_incoming` available
  --> tests/compile_fail/add_incoming_after_finish.rs:27:13
   |
27 |         let phi = b.build_int_phi::<i32>("p").unwrap();
   |             ^^^ `phi` of type `PhiInst<'_, i32, llvmkit_ir::Open, Brand<'_>>` that has method `add_incoming` defined earlier here
28 |         let phi = phi
   |             --- earlier `phi` shadowed here with type `PhiInst<'_, i32, llvmkit_ir::Closed, Brand<'_>>`
help: there is a method `incoming` with a similar name, but with different arguments
  --> src/instructions.rs
   |
   | /     pub fn incoming(
   | |         self,
   | |         index: u32,
   | |     ) -> crate::IrResult<(
   | |         Value<'ctx>,
   | |         crate::basic_block::BasicBlock<'ctx, crate::marker::Dyn>,
   | |     )> {
   | |______^
